antes de formateo

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
     <!-- INICIA SECCIÓN CLIENTES -->
 
-    <div id="completo">
+    <div id="completo" class="seccion_clientes">
         <div class="jMyCarousel clientes_carousel_container"
             style="visibility: visible; overflow: hidden; position: relative; z-index: 2; left: 0px; width: 100%; height: 109px;"
             >
